@@ -60,21 +60,23 @@ class StatisticsIntegrationTest extends AbstractSpringIntegrationBambooBitbucket
 
     private TextExercise exercise;
 
-    private final List<GraphType> artemisGraphs = Arrays.asList(GraphType.SUBMISSIONS, GraphType.ACTIVE_USERS, GraphType.LOGGED_IN_USERS, GraphType.RELEASED_EXERCISES,
+    private final List<GraphType> artemisGraphs = List.of(GraphType.SUBMISSIONS, GraphType.ACTIVE_USERS, GraphType.LOGGED_IN_USERS, GraphType.RELEASED_EXERCISES,
             GraphType.EXERCISES_DUE, GraphType.CONDUCTED_EXAMS, GraphType.EXAM_PARTICIPATIONS, GraphType.EXAM_REGISTRATIONS, GraphType.ACTIVE_TUTORS, GraphType.CREATED_RESULTS,
             GraphType.CREATED_FEEDBACKS);
 
-    private final List<GraphType> courseGraphs = Arrays.asList(GraphType.SUBMISSIONS, GraphType.ACTIVE_USERS, GraphType.RELEASED_EXERCISES, GraphType.EXERCISES_DUE,
+    private final List<GraphType> courseGraphs = List.of(GraphType.SUBMISSIONS, GraphType.ACTIVE_USERS, GraphType.RELEASED_EXERCISES, GraphType.EXERCISES_DUE,
             GraphType.CONDUCTED_EXAMS, GraphType.EXAM_PARTICIPATIONS, GraphType.EXAM_REGISTRATIONS, GraphType.ACTIVE_TUTORS, GraphType.CREATED_RESULTS, GraphType.CREATED_FEEDBACKS,
             GraphType.POSTS, GraphType.RESOLVED_POSTS);
 
-    private final List<GraphType> exerciseGraphs = Arrays.asList(GraphType.SUBMISSIONS, GraphType.ACTIVE_USERS, GraphType.ACTIVE_TUTORS, GraphType.CREATED_RESULTS,
+    private final List<GraphType> exerciseGraphs = List.of(GraphType.SUBMISSIONS, GraphType.ACTIVE_USERS, GraphType.ACTIVE_TUTORS, GraphType.CREATED_RESULTS,
             GraphType.CREATED_FEEDBACKS, GraphType.POSTS, GraphType.RESOLVED_POSTS);
+
+    private static final int NUMBER_OF_STUDENTS = 5;
 
     @BeforeEach
     void initTestCase() {
         participantScoreSchedulerService.activate();
-        database.addUsers(TEST_PREFIX, 12, 10, 0, 10);
+        database.addUsers(TEST_PREFIX, NUMBER_OF_STUDENTS, 1, 0, 1);
 
         course = database.addCourseWithOneModelingExercise();
         var now = ZonedDateTime.now();
@@ -102,7 +104,7 @@ class StatisticsIntegrationTest extends AbstractSpringIntegrationBambooBitbucket
         var submission = database.addSubmission(exercise, textSubmission, TEST_PREFIX + "student1");
         database.addResultToSubmission(submission, AssessmentType.MANUAL);
 
-        for (int i = 2; i <= 12; i++) {
+        for (int i = 2; i <= NUMBER_OF_STUDENTS; i++) {
             textSubmission = new TextSubmission();
             textSubmission.submissionDate(ZonedDateTime.now().minusMonths(i - 1).withDayOfMonth(10));
             submission = database.addSubmission(exercise, textSubmission, TEST_PREFIX + "student" + i);
